more explanation on what this thang is

--- a/packages/components/src/List/List.mdx
+++ b/packages/components/src/List/List.mdx
@@ -14,7 +14,9 @@ import { Card } from "../Card";
 
 <ComponentStatus stage="pre" responsive="no" accessible="no" />
 
-Write a description about what List component is trying to achieve.
+Displays a collection of objects that are either the same type or related to one
+another, like billing or activity feed. The main purpose of a list is to help
+the user find an object that leads to it's full representation.
 
 ```ts
 import { List } from "@jobber/components/List";
@@ -56,6 +58,8 @@ import { List } from "@jobber/components/List";
 ---
 
 ## Sectioned List Items
+
+This groups the component in specific sections.
 
 <Playground>
   <Card>
