Moves Natasha out of a label
Natasha was inside of labels and that was making her not show up in example lists.

--- a/packages/components/src/Select/Select.mdx
+++ b/packages/components/src/Select/Select.mdx
@@ -43,7 +43,7 @@ import { Select, Option } from "@jobber/components/Select";
       Tony
     </Option>
     <Option value="old">Steve</Option>
-    <Option value="splat" label="Natasha"></Option>
+    <Option value="splat">Natasha</Option>
   </Select>
 </Playground>
 
@@ -56,7 +56,7 @@ import { Select, Option } from "@jobber/components/Select";
       Tony
     </Option>
     <Option value="old">Steve</Option>
-    <Option value="splat" label="Natasha"></Option>
+    <Option value="splat">Natasha</Option>
   </Select>
 </Playground>
 
