--- a/packages/components/src/InputTime/InputTime.mdx
+++ b/packages/components/src/InputTime/InputTime.mdx
@@ -58,8 +58,8 @@ import { InputTime } "@jobber/components/InputTime";
 ## Events
 
 If the input starts empty the `ChangeEvent` isn't fired until a full time is
-set. Setting just the hour or minute or _meridiam_ won't fire the event. When
-the last element is set the change event will fire.
+set. Setting just the hour or minute or _period_ (AM/PM) won't fire the event. 
+When the last element is set the change event will fire.
 
 <Playground>
   {() => {
