add jobber system colours for headings

--- a/packages/components/src/List/List.mdx
+++ b/packages/components/src/List/List.mdx
@@ -63,7 +63,8 @@ This groups the component in specific sections.
 
 <Playground>
   <Card>
-    <List items={[
+    <List
+    items={[
       {
         id: 1,
         icon: "addNote",
@@ -95,7 +96,8 @@ This groups the component in specific sections.
         onClick: () => alert("TODO: Implement onClick"),
         section: "Yesterday",
       },
-    ]} />
+    ]}
+    jobberSectionColors={false} />
 
   </Card>
 </Playground>
