rename date and amount to caption and value

--- a/packages/components/src/List/List.mdx
+++ b/packages/components/src/List/List.mdx
@@ -30,16 +30,16 @@ import { List } from "@jobber/components/List";
         icon: "wallet",
         iconColor: "orange",
         content: "Payment for Invoice #39",
-        amount: "-$300.00",
-        date: "Sep 25, 2019",
+        value: "-$300.00",
+        caption: "Sep 25, 2019",
         onClick: () => alert("TODO: Implement onClick")
       },
       {
         id: 3,
         icon: "paidInvoice",
         content: "Invoice #39",
-        amount: "$300.00",
-        date: "Sep 24, 2019",
+        value: "$300.00",
+        caption: "Sep 24, 2019",
         onClick: () => alert("TODO: Implement onClick")
       },
     ]} />
@@ -75,7 +75,7 @@ name of the section. If you wish to not use them, simply return a `false` on
         icon: "addNote",
         title: "Darryl Tec added a note",
         content: ["_\"Called the client. Asked if they want the luxury package, they said yes!\"_", "Deck Build"],
-        date: "1 minute ago",
+        caption: "1 minute ago",
         section: "Today",
         isActive: true,
         onClick: () => alert("TODO: Implement onClick"),
@@ -86,7 +86,7 @@ name of the section. If you wish to not use them, simply return a `false` on
         iconColor: "green",
         title: "Josh Elford completed a visit",
         content: "Annual Maintenance",
-        date: "2 hours ago",
+        caption: "2 hours ago",
         section: "Today",
         onClick: () => alert("TODO: Implement onClick"),
       },
@@ -96,8 +96,8 @@ name of the section. If you wish to not use them, simply return a `false` on
         icon: "badInvoice",
         title: "Payment failed",
         content: "For services rendered",
-        amount: "$300.00",
-        date: "1 day ago",
+        value: "$300.00",
+        caption: "1 day ago",
         onClick: () => alert("TODO: Implement onClick"),
         section: "Yesterday",
       },
