Geeze Sean, write a real description.

--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -14,7 +14,11 @@ import { useState } from "react";
 
 <ComponentStatus stage="pre" responsive="no" accessible="no" />
 
-Write a description about what Autocomplete component is trying to achieve.
+An autocomplete allows a user to quickly pick a preset value from a larger list
+of possible options.
+
+If the number of available options is smaller consider a [Select](select)
+instead.
 
 ```ts
 import { Autocomplete } from "@jobber/components/Autocomplete";
