--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -27,12 +27,12 @@ import { Autocomplete } from "@jobber/components/Autocomplete";
 <Playground>
     {() => {
     const options = [
-        { value: "1", label: "Nostromo" },
-        { value: "2", label: "Rodger Young" },
-        { value: "3", label: "Serenity" },
-        { value: "4", label: "Sleeper Service" },
-        { value: "5", label: "Enterprise" },
-        { value: "6", label: "Enterprise-D" },
+        { value: 1, label: "Nostromo" },
+        { value: 2, label: "Rodger Young" },
+        { value: 3, label: "Serenity" },
+        { value: 4, label: "Sleeper Service" },
+        { value: 5, label: "Enterprise" },
+        { value: 6, label: "Enterprise-D" },
       ];
 
     const [value, setValue] = useState();
@@ -80,12 +80,12 @@ You can supply a value to `Autocomplete` in the form of an active `Option`.
 <Playground>
     {() => {
     const options = [
-        { value: "1", label: "Nostromo" },
-        { value: "2", label: "Rodger Young" },
-        { value: "3", label: "Serenity" },
-        { value: "4", label: "Sleeper Service" },
-        { value: "5", label: "Enterprise" },
-        { value: "6", label: "Enterprise-D" },
+        { value: 1, label: "Nostromo" },
+        { value: 2, label: "Rodger Young" },
+        { value: 3, label: "Serenity" },
+        { value: 4, label: "Sleeper Service" },
+        { value: 5, label: "Enterprise" },
+        { value: 6, label: "Enterprise-D" },
       ];
 
     const [value, setValue] = useState();
@@ -126,12 +126,12 @@ using either promises or `await` in `getOptions`.
 <Playground>
     {() => {
     const options = [
-        { value: "1", label: "Nostromo" },
-        { value: "2", label: "Rodger Young" },
-        { value: "3", label: "Serenity" },
-        { value: "4", label: "Sleeper Service" },
-        { value: "5", label: "Enterprise" },
-        { value: "6", label: "Enterprise-D" },
+        { value: 1, label: "Nostromo" },
+        { value: 2, label: "Rodger Young" },
+        { value: 3, label: "Serenity" },
+        { value: 4, label: "Sleeper Service" },
+        { value: 5, label: "Enterprise" },
+        { value: 6, label: "Enterprise-D" },
       ];
 
     const [value, setValue] = useState();
