add truck to atlantis docs

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -230,6 +230,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="sync" />       | `sync`       |
 | <Icon name="thumbsUp" />   | `thumbsUp`   |
 | <Icon name="xero" />       | `xero`       |
+| <Icon name="truck" />      | `truck`      |
 
 ## Legacy
 
