adjust status to be used as ready

--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -11,7 +11,7 @@ import { useState } from "react";
 
 # Checkbox
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Checkboxes let a user select one or more items from a set of options.
 
