update varition to be warn from warning

--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -63,7 +63,7 @@ only be used right after a page title.
   <br />
   <Text variation="error">Name is required</Text>
   <br />
-  <Text variation="warning">Your message is over 160 characters</Text>
+  <Text variation="warn">Your message is over 160 characters</Text>
   <br />
   <Text variation="info">
     Drag to rearrange the order that fields show up in Jobber
