Add a prop to remove the close button on Banner

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -54,3 +54,13 @@ import { Banner } from "@jobber/components/Banner";
 <Playground>
   <Banner type="error">Hulk smash has been unsuccessful</Banner>
 </Playground>
+
+---
+
+## Show Close
+
+<Playground>
+  <Banner type="notice" showClose={false}>
+    Hulk smash was super effective
+  </Banner>
+</Playground>
