swap import to feature switch

--- a/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
+++ b/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
@@ -17,7 +17,7 @@ import { useState } from "react";
 Allow users to switch a feature on or off.
 
 ```ts
-import { FormatTime } from "@jobber/components/FormatTime";
+import { FeatureSwitch } from "@jobber/components/FeatureSwitch";
 ```
 
 <Playground>
