--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -13,7 +13,8 @@ import { useState } from "react";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-Checkboxes let a user select one or more items from a set of options.
+Checkboxes let a user select one or more items from a set of options. If you
+intending to turn an option on or off consider a [Switch](switch) instead.
 
 ```ts
 import { Checkbox } from "@jobber/components/Checkbox";
