Add onClick fn to tabs

--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -23,7 +23,7 @@ import { Tabs, Tab } from "@jobber/components/Tabs";
 
 <Playground>
   <Tabs>
-    <Tab label="Eggs">
+    <Tab label="Eggs" onClick={() => alert("I had eggs for breakfast.")}>
       🍳 Some eggs are laid by female animals of many different species,
       including birds, reptiles, amphibians, mammals, and fish, and have been
       eaten by humans for thousands of years.
