Move to Training Day section & start on notes.

--- a/packages/components/src/PasswordEditor/PasswordEditor.mdx
+++ b/packages/components/src/PasswordEditor/PasswordEditor.mdx
@@ -1,7 +1,7 @@
 ---
 name: PasswordEditor
-menu: Components
-route: /components/password-editor
+menu: Training Day
+route: /training/password-editor
 ---
 
 import { Playground, Props } from "docz";
@@ -39,6 +39,12 @@ import { PasswordEditor } from "@jobber/components/PasswordEditor";
 <Props of={PasswordEditor} />
 
 ---
+
+## Notes:
+
+- Dereferenceing
+- https://testing-library.com/docs/dom-testing-library/api-queries#queryby
+- npm test -- packages/components/src/PasswordEditor/PasswordEditor.test.tsx
 
 <!--
   It is not necessary to provide an example of each prop. Use usage examples to
