--- a/packages/components/src/PasswordEditor/PasswordEditor.mdx
+++ b/packages/components/src/PasswordEditor/PasswordEditor.mdx
@@ -45,6 +45,8 @@ import { PasswordEditor } from "@jobber/components/PasswordEditor";
 - Dereferenceing
 - https://testing-library.com/docs/dom-testing-library/api-queries#queryby
 - npm test -- packages/components/src/PasswordEditor/PasswordEditor.test.tsx
+- `../Component`
+- Updating snapshots
 
 <!--
   It is not necessary to provide an example of each prop. Use usage examples to
