addressed feedback minus Accessibility stuff

--- a/packages/components/src/Spinner/Spinner.mdx
+++ b/packages/components/src/Spinner/Spinner.mdx
@@ -42,7 +42,7 @@ import { Spinner } from "@jobber/components/Spinner";
 Use `small` to make the spinner small.
 
 <Playground>
-  <Spinner small={true} />
+  <Spinner size="small" />
 </Playground>
 
 ## Inline
