--- a/packages/components/src/Modal/Modal.mdx
+++ b/packages/components/src/Modal/Modal.mdx
@@ -76,8 +76,8 @@ You have 3 action props you can use
           title="Hold the phone!"
           open={modalOpen}
           primaryAction={{ label: "Submit", onClick: handlePrimaryAction }}
-          secondaryAction={{ label: "Cancel", onClick: handleSecondaryAction }}
-          tertiaryAction={{ label: "Delete", onClick: handleTertiaryAction }}
+          secondaryAction={{ label: "Cancel", variation: "cancel", onClick: handleSecondaryAction }}
+          tertiaryAction={{ label: "Delete", variation: "destructive", onClick: handleTertiaryAction }}
           onRequestClose={toggleModal}
         >
           <Content>
