fix: Readme `import` Typos

--- a/packages/components/src/Table/Table.mdx
+++ b/packages/components/src/Table/Table.mdx
@@ -28,7 +28,7 @@ table.
 Multiple [Cell types](#cell-types) are provided for common formats.
 
 ```ts
-import { Table, Header, Footer, Row, Cell } from "@jobber/components/Modal";
+import { Table, Header, Footer, Row, Cell } from "@jobber/components/Table";
 ```
 
 <Playground>
