--- a/packages/components/src/Typography/Typography.mdx
+++ b/packages/components/src/Typography/Typography.mdx
@@ -13,7 +13,7 @@ import { Typography } from ".";
 Base component that defines typographic standards across Jobber
 
 ```ts
-import { Modal } from "@jobber/components/Modal";
+import { Typography } from "@jobber/components/Typography";
 ```
 
 <Playground>
