--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -12,7 +12,7 @@ import { Tabs, Tab } from ".";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-In Jobber a tabs are used to alternate amongst related views within the same
+In Jobber tabs are used to alternate amongst related views within the same
 context.
 
 ## Simple Example
