initial popper working

--- a/packages/components/src/Tooltip/Tooltip.mdx
+++ b/packages/components/src/Tooltip/Tooltip.mdx
@@ -22,6 +22,18 @@ import { Tooltip } from "@jobber/components/Tooltip";
 ```
 
 <Playground>
+  <div style={{ height: "100px", overflow: "auto" }}>
+    <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />{" "}
+    <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
+    <Tooltip message="'tis a button">
+      <Button label="Hover On Me" />
+    </Tooltip>
+    <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />{" "}
+    <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
+  </div>
+</Playground>
+
+<Playground>
   <Tooltip message="'tis a button">
     <Button label="Hover On Me" />
   </Tooltip>
