--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -36,8 +36,8 @@ import { InputValidation } from "@jobber/components/InputValidation";
               {
                 shouldShow: value !== "Jeff",
                 message: "Have you considered a better name, like Jeff?",
-                status: "error",
-              },
+                status: "error"
+              }
             ]}
             onValidation={setValidationMessages}
             name="myName"
@@ -51,9 +51,7 @@ import { InputValidation } from "@jobber/components/InputValidation";
         </Text>
       </>
     );
-
-}}
-
+  }}
 </Playground>
 
 ## Props
