--- a/packages/components/src/Markdown/Markdown.mdx
+++ b/packages/components/src/Markdown/Markdown.mdx
@@ -23,10 +23,9 @@ import { Markdown } from "@jobber/components/Markdown";
 <Playground>
   <Markdown
     content={`### Bananas
-
     Bananas are **yellow** on the outside and **white** on the inside. They're also full of nutrients, _but thats just boring stuff_. At this point, I'll just ask you to [google it](https://lmgtfy.com/?q=types+of+bananas).`}
-    externalLink={true} />
-
+    externalLink={true}
+  />
 </Playground>
 
 ## Props
