fix(components): fix typo in Heading documentation

--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -82,5 +82,5 @@ component
 Used to group contents after a [heading 4](#heading-4)
 
 <Playground>
-  <Heading level={5}>Recieves SMS</Heading>
+  <Heading level={5}>Receives SMS</Heading>
 </Playground>
