--- a/packages/components/src/List/List.mdx
+++ b/packages/components/src/List/List.mdx
@@ -16,7 +16,7 @@ import { Card } from "../Card";
 
 Displays a collection of objects that are either the same type or related to one
 another, like billing or activity feed. The main purpose of a list is to help
-the user find an object that leads to it's full representation.
+the user find an object that leads to its full representation.
 
 ```ts
 import { List } from "@jobber/components/List";
