--- a/packages/design/src/Elevations.mdx
+++ b/packages/design/src/Elevations.mdx
@@ -11,7 +11,7 @@ The following table lists all elements that has a z-index specified on it.
 export function Value({ of: type }) {
   const styles = getComputedStyle(document.documentElement);
   const getValue = styles.getPropertyValue(`--elevation-${type}`);
-  return <>{getValue}</>;
+  return <span>{getValue}</span>;
 }
 
 | Component        | Value                  |
