--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -25,6 +25,16 @@ Use icons as intended. Provided icons have a specific, meaning. To avoid
 confusing users, it’s essential that each image be used in accordance with its
 meaning and recommended usage.
 
+## Design Guidlines
+
+When contributing a new icon, follow these guidelines:
+
+- Design within a 24px grid
+- Line weight should be 2px
+- Corners should be rounded to a 1px radius
+- When a line is interrupted, use geometric/square terminals 
+- when a line ends organically, use round terminals
+
 ```ts
 import { Icon } from "@jobber/components/Icon";
 ```
