pr fixes on mostly comments

--- a/docs/getting-started-with-react/getting-started-with-react.mdx
+++ b/docs/getting-started-with-react/getting-started-with-react.mdx
@@ -97,10 +97,10 @@ that.
 For this example we are going to build a card that allows you to enter a topic
 and then search for a related gif.
 
-import { Card } from "../../packages/components/src/Card";
-import { Content } from "../../packages/components/src/Content";
-import { Button } from "../../packages/components/src/Button";
-import { InputText } from "../../packages/components/src/InputText";
+import { Card } from "@jobber/components/Card";
+import { Content } from "@jobber/components/Content";
+import { Button } from "@jobber/components/Button";
+import { InputText } from "@jobber/components/InputText";
 import { loadingGIF, getGIF } from "./getGIF";
 
 <Playground>
