lowercase w in weight

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -33,7 +33,7 @@ When contributing a new icon, follow these guidelines:
 
 - Design within a 20px grid on a 24px artboard
 - Circular icons should have a 20px diameter
-- Lines should have a 2px Weight
+- Lines should have a 2px weight
 
 ### Corners
 
