--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -25,7 +25,7 @@ Use icons as intended. Provided icons have a specific, meaning. To avoid
 confusing users, it’s essential that each image be used in accordance with its
 meaning and recommended usage.
 
-## Design Guidlines
+## Design Guidelines
 
 When contributing a new icon, follow these guidelines:
 
