clarify corners and artboard size

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -31,14 +31,16 @@ When contributing a new icon, follow these guidelines:
 
 ### Size and Weight
 
-- Design within a 20px grid on a 24px artboard
+- Icons should have a height and width of 20px container within a 24px artboard,
+  effectively providing a 2px padding on all sides
 - Circular icons should have a 20px diameter
 - Lines should have a 2px weight
 
 ### Corners
 
-- Right-angle corners should have a 2px radius
-- Irregular corners should have a 1px radius
+- 90° corners should have a 2px radius
+- Greater than 90° corners should have a 1px radius
+- 1–90° corners should have an 0.5px radius
 - Interior corners should not have a radius
 
 ### Line Terminals
