chore: Upgrade & Theme Docz (#205)
* Remove this to avoid polyfill for now.

* Properly package docx

* upgrade docz

* Remove these until they are properly ignored.

* Restore one at a time and deal with their issues

* Temporarily remove empty lines.

* Add Alt text

* Things are mostly working again.

* add favicon

* Revert "Remove these until they are properly ignored."

This reverts commit 81aa818fef277d6985ca0168b671a1e6b73df02e.

* Revert "Restore one at a time and deal with their issues"

This reverts commit 932467852506ec53a318dad06019097925d752c2.

* Heading Theming.

* Revert "Remove this to avoid polyfill for now."

This reverts commit d3e7ecbf8fa91cb6d1cce2a7e8ab9402d1f1aad2.

Disable Serverside rendering for input time polyfill.

* Allows aliasing on @jobber/components in docz

* Fixup the InputTime gatsby battle in a better way.

* Upgrade to edge docz

* Fix for SSR.

* Simpler SSR

This also reverts commit 8147d9b3bad9da82a14f016b0d75a2a428e65d83.

* Move build to docz:build

* Don't SSR .md or .mdx files

* chore: cleanup props table following the upgrade (#208)

* chore: style the `Playground` component (#209)

* chore: style the `Playground` component

* chore: move to brand colors

* Content width.

* update docz theme

* Better color here

* This 🍩 need to be a function.

* chore: Upgrade docz - Style inline code (#207)

* Styles the inline code

* Changes styles to use jobber css vars

* chore: Update the Docz sidebar (#211)

* Updates the styling of the sidebar

* Removes a redudant key, some eslint exceptions and tooltips

* change the logo gradient to a bit less intense

* makes the logos the same size

* Updates border radius from px to percentage

* chore: Upgrade docz - Elevation  (#216)

* add span around Value component

* changes span to React Fragment

* pr fixes on mostly comments

* Explain {{mdx}}.

* Explain SSR null loader

* HELMETS

--- a/docs/getting-started-with-react/getting-started-with-react.mdx
+++ b/docs/getting-started-with-react/getting-started-with-react.mdx
@@ -107,29 +107,20 @@ import { loadingGIF, getGIF } from "./getGIF";
   {() => {
     const [topic, setTopic] = useState();
     const [url, setURL] = useState();
-
     return (
       <Card title="Gif Gift">
         <Content>
-          <InputText
-            value={topic}
-            onChange={setTopic}
-            placeholder="Topic"
-          />
+          <InputText value={topic} onChange={setTopic} placeholder="Topic" />
           <Button label="Search" fullWidth={true} onClick={gifSearch} />
-
           <center>{url && <img src={url} />}</center>
         </Content>
       </Card>
     );
-
     async function gifSearch() {
       setURL(loadingGIF);
       setURL(await getGIF(topic));
     }
-
-}}
-
+  }}
 </Playground>
 
 > **Note:**
