--- a/packages/components/src/InputGroup/InputGroup.mdx
+++ b/packages/components/src/InputGroup/InputGroup.mdx
@@ -20,6 +20,10 @@ form fields once submitted make up a group of content (ie. an address, or first
 and last name becoming a full name) they are great candidates for an input
 group.
 
+The default layout is for fields to flow in a vertical direction, one above the
+next. Use the `flowDirection` prop to specify when you want fields to flow in a
+horizontal direction.
+
 <Playground>
   <InputGroup>
     <InputText placeholder="Street 1" />
